<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 文件菜单 -->
    <item
        android:id="@+id/menu_file"
        android:title="@string/menu_file"
        android:icon="@drawable/ic_file"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_new"
                android:title="@string/menu_new"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_open"
                android:title="@string/menu_open"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_save"
                android:title="@string/menu_save"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_save_as"
                android:title="@string/menu_save_as"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_encoding"
                android:title="@string/menu_encoding"
                app:showAsAction="never" />
        </menu>
    </item>

    <!-- 编辑菜单 -->
    <item
        android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_search"
                android:title="@string/menu_search"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_source_view"
                android:title="@string/menu_source_view"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_cancel_selection"
                android:title="@string/menu_cancel_selection"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_select_range"
                android:title="@string/menu_select_range"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_save_draft"
                android:title="@string/menu_save_draft"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_drafts"
                android:title="@string/menu_drafts"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>